# LuaJIT

./: make.py  meson.build
src/: Makefile  lib_aux.c  lib_base.c  lib_bit.c  lib_math.c  lib_package.c  lib_string.c  lib_table.c  lj_api.c  lj_arch.h  lj_buf.c  lj_carith.c  lj_err.c  lj_ffrecord.c  lj_frame.h  lj_ir.c  lj_lib.c  lj_meta.c  lj_opt_narrow.c  lj_parse.c  lj_record.c  lj_strscan.h  lj_tab.c  vm_arm64.dasc  vm_x64.dasc  vm_x86.dasc
src/host/: buildvm.c  buildvm_lib.c  buildvm_libbc.h  genlibbc.lua
